--- a/style/css.css
+++ b/style/css.css
@@ -178,19 +178,14 @@ ul>li{
     font-size: 40px;
 
 }
-.box-1{
-     /* padding-right: 60px; */
-}
 .box{
     display: flex;
+    align-items: center;
     gap: 100px;
-    padding: 100px;
+    padding: 50px;
     background-color: rgb(95, 90, 90);
     border-radius: 20px;
-    height: 200px;
-    padding-right: 30px;
-    padding-left: 30px;
-    padding-top: 30px;
+    
 }
 .button{
     background-color: red;
@@ -203,7 +198,55 @@ ul>li{
 @media screen and (max-width:576px){
     .box, box-1, b0x-2{
         flex-direction: column;
-       
+    }
+    .box-2 img{
+        border-radius: 30px;
+        
+    }
+}
+.calculator{
+    text-align: center;
+    font-size: large;
+    
+}
+.box-3{
+    tabile{
+        border-collapse:collapse ;
+        font-size: 18px;
+        text-align: left;
+    }
+    th,td{
+        padding: 3px 10px;
+        border: 1px solid white;
     }
     
+}
+.chart{
+    background-color: rgb(56, 47, 47);
+    display: flex;
+}
+.box-5{
+    gap: 10px;
+    padding-left: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    
+}
+.box-5 input{
+    padding: 7px;
+    border-radius: 7px;
+    background-color:     rgb(83, 79, 79);
+}
+.gender{
+    width: 183px;
+    padding: 7px;
+    background-color: rgb(83, 79, 79);
+    border-radius: 5px;
+}
+.activity{
+    width: 203px;
+    display: block;
+    padding: 7px;
+    background-color: rgb(83, 79, 79) ;
+    border-radius: 5px;
 }
