--- a/style/css.css
+++ b/style/css.css
@@ -1,10 +1,13 @@
 body{
     background-color: black;
     color: white;
+   
+    font-family: "Inter", sans-serif;
+}
+.container{
     padding-left: 10%;
     padding-right: 10%;
     padding-top: 20px;
-    font-family: "Inter", sans-serif;
 }
 .text-primary{
     background-color: red;
@@ -22,7 +25,6 @@ body{
 }
 .fitness{
     color: red;
-    /* padding-left: 60px; */
 }
 .font{
     font-family: 'miama' ,sans-serif;
@@ -251,5 +253,82 @@ ul>li{
     border-radius: 5px;
 }
 .team{
+    text-align: center;
+    padding-bottom: 20px;
+}
+.relative{
+    position: relative;
+}
+.name{
+    position: absolute;
+    left: 5px;
+    bottom: 5px;
+}
+.trining-center {
+    width: Fill (1,060px)px;
+height: Hug (604px)px;
+gap:15px;
+opacity: 0px;
+display: grid;
+grid-template-columns: repeat(3 ,1fr);
+background-color: rgb(117, 104, 104);
+border-radius: 10px;
+width: 100%;
+padding: 20px;
+}
+ .trining-center img{
+width: 100%;
+height: 250px;
+border-radius: 20px;
+    
+}
+@media screen and (max-width:576px){
+    .team{
+        flex-direction:column;
+    }
+    .trining-center{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+}
+.last h2{
+    color: red;
+    font-size: 50px;
+}
+.last{
+    padding-left: 20px;
+}
+.full-body{
+    background-color: rgb(99, 91, 91);
+    padding-left: 100px;
+    padding-top: 10px;
+    display: flex;
+    margin-top: 30px;
+    padding-bottom: 10px;
+flex-direction: column;
+}
+.br{
+    display: flex;
+    padding-top: 60px;
+    gap: 40px;
+
+}
+@media screen and (max-width:576px){
+    .full-body{
+        flex-direction: clumn;
+    }
+}
+@media screen and (max-width:576px){
+    .full-body{
+        flex-direction: column;
+    }
+    .br{
+        flex-direction: column;
+    }
+    .cr{
+        flex-direction: column;
+    }
+}
+.cr{
     text-align: center;
 }
