--- a/style/css.css
+++ b/style/css.css
@@ -221,36 +221,58 @@ ul>li{
         padding: 3px 10px;
         border: 1px solid white;
     }
-    
+    width: 50%;
 }
+
+
 .chart{
     background-color: rgb(56, 47, 47);
-    display: flex;
+    display:flex;
+    justify-content: center;
+    padding: 50px;
+    gap: 30px;
 }
-.box-5{
-    gap: 10px;
-    padding-left: 100px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+.box-6{
+    display:grid;
+    grid-template-columns:repeat(2 ,1fr) ;
+    width:500px;
+    gap: 10px;margin-bottom: 10px;
+  
     
 }
-.box-5 input{
+
+.box-6-input{
     padding: 7px;
     border-radius: 7px;
-    background-color:     rgb(83, 79, 79);
+    background-color: rgb(83, 79, 79);
+    
 }
 .gender{
-    width: 183px;
+    width: 100%;
     padding: 7px;
     background-color: rgb(83, 79, 79);
     border-radius: 5px;
 }
 .activity{
-    width: 203px;
+    grid-column: 1/ span 2;
     display: block;
     padding: 7px;
     background-color: rgb(83, 79, 79) ;
     border-radius: 5px;
+}
+@media screen  and (max-width:576px){
+    .calculator{
+        flex-direction: column;
+    }
+    .chart{
+        flex-direction: column;
+    }
+    .box-3{
+        flex-direction: column;
+    }
+    .box-6{
+        grid-template-columns:repeat(1,1fr);
+    }
 }
 .team{
     text-align: center;
