--- a/style/css.css
+++ b/style/css.css
@@ -1,15 +1,17 @@
-body{
+body {
     background-color: black;
     color: white;
-   
+
     font-family: "Inter", sans-serif;
 }
-.container{
+
+.container {
     padding-left: 10%;
     padding-right: 10%;
     padding-top: 20px;
 }
-.text-primary{
+
+.text-primary {
     background-color: red;
     border-radius: 20px;
     padding: 10px 20px;
@@ -18,44 +20,52 @@ body{
     border: 1px solid rgb(255, 255, 255);
 
 }
-.helthay h1{
+
+.helthay h1 {
     font-family: "Rubik", sans-serif;
     font-size: 55px;
 
 }
-.fitness{
+
+.fitness {
     color: red;
 }
-.font{
-    font-family: 'miama' ,sans-serif;
+
+.font {
+    font-family: 'miama', sans-serif;
     font-size: 100px;
 }
-.header{
+
+.header {
     display: flex;
     gap: 1rem;
     justify-content: space-between;
-    
+
 }
-.svg-icon{
+
+.svg-icon {
     display: none;
 }
-ul>li{
+
+ul>li {
     list-style: none;
-   
+
     align-items: center;
-    
+
 }
-.nav-menu{
+
+.nav-menu {
     display: flex;
     gap: 30px;
-     border: 1px solid #FFFFFF1A;
-     border-radius: 50px;
-     justify-content: space-between;
-     align-items: center;
-     padding: 0 10px 0 0;
+    border: 1px solid #FFFFFF1A;
+    border-radius: 50px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px 0 0;
 }
-.text-button{
-    background-color:black;
+
+.text-button {
+    background-color: black;
     border-radius: 20px;
     padding: 10px 20px;
     width: 150px;
@@ -63,133 +73,187 @@ ul>li{
     border: 1px solid white;
 
 }
-@media screen and (max-width:576px){
-    .header{
+
+@media screen and (max-width:576px) {
+    .header {
         /* flex-direction: column; */
         text-align: center;
         display: flex;
-        
+
     }
-    .nav-menu{
+
+    .nav-menu {
         flex-direction: column;
-        display:none;
+        display: none;
     }
-    .svg-icon{
+
+    .svg-icon {
         display: block;
 
     }
 }
-.first-card{
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 200px;
-    border-radius: 5px;
-    background-color: rgba(255, 255, 255,0.082);
-    padding: 1rem;
-    font-size: 40px;
-    font-weight: 900;
-    backface-visibility: blur(20px);
-    position: absolute;
-    left:200px;
-    bottom: 400px;
-    
+
+@media (min-width: 820px) and (max-width: 1180px) {
+    .header {
+        display: flex;
+        text-align: center;
+    }
+
+    .nav-menu {
+        flex-direction: row;
+    }
+
 }
-.second-card{
+
+.first-card {
     color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 200px;
     border-radius: 5px;
-    background-color: rgba(255, 255, 255,0.082);
+    background-color: rgba(255, 255, 255, 0.082);
     padding: 1rem;
     font-size: 40px;
     font-weight: 900;
     backface-visibility: blur(20px);
     position: absolute;
-    padding-left:20px ;
-    left:-50%;
+    left: 200px;
+    bottom: 400px;
+
+}
+
+.second-card {
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 200px;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.082);
+    padding: 1rem;
+    font-size: 40px;
+    font-weight: 900;
+    backface-visibility: blur(20px);
+    position: absolute;
+    padding-left: 20px;
+    left: -50%;
     bottom: 50px;
-    
-} 
-.second-card span{
+
+}
+
+.second-card span {
     height: 40px;
     width: 40px;
     background-color: rgb(221, 42, 42);
     border-radius: 50%;
     display: block;
 }
-.first-card span{
+
+.first-card span {
     height: 40px;
     width: 40px;
     background-color: rgb(221, 42, 42);
-    border-radius:50%;
+    border-radius: 50%;
     display: block;
 }
-.banner{
+
+.banner {
     display: flex;
     gap: 100px;
     align-items: center;
     font-weight: 400;
     font-style: normal;
 }
-.man{
+
+.man {
     position: relative;
 
 }
-@media screen and (max-width:576px){
-    .banner{
+
+@media screen and (max-width:576px) {
+    .banner {
         flex-direction: column;
     }
 }
-.chang-habits{
+
+@media (min-width: 820px) and (max-width:1180px) {
+    .banner {
+        flex-direction: column;
+    }
+}
+
+.chang-habits {
     text-align: center;
 }
-.img-show{
+
+.img-show {
     display: flex;
     border-radius: 20px;
     padding: 20px;
     padding: 100px;
     gap: 10px;
-    padding-right: 40px; 
+    padding-right: 40px;
     margin-top: 10px;
     padding-left: 25px;
 }
-.triner{
+
+.triner {
     border-radius: 100px;
-    
+
 }
-@media screen and (max-width:576px){
-    .chang-habits{
-        flex-direction:column ;
+
+@media screen and (max-width:576px) {
+    .chang-habits {
+        flex-direction: column;
     }
-    .img-show{
+
+    .img-show {
         display: grid;
-        grid-template-columns: repeat(1,1,1fr);
+        grid-template-columns: repeat(1, 1, 1fr);
+    }
+
+    .box-2 img {
+        height: 180px;
+        border-radius: 30px;
+
     }
 }
-.box-2 img{
-    height: 250px;
-    border-radius: 30px;
-    
+
+@media (min-width: 800px) and (max-width: 1180px) {
+    .chang-habits {
+        flex-direction: column;
+    }
+
+    .img-show {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
-.box-1 h1{
-    font-family:  "Rubik", sans-serif;
+
+.box-2 img {
+    height: 300px;
+    border-radius: 30px;
+
+}
+
+.box-1 h1 {
+    font-family: "Rubik", sans-serif;
     font-size: 40px;
 
 }
-.box{
+
+.box {
     display: flex;
     align-items: center;
     gap: 100px;
     padding: 50px;
     background-color: rgb(95, 90, 90);
     border-radius: 20px;
-    
+
 }
-.button{
+
+.button {
     background-color: red;
     border-radius: 20px;
     padding: 10px 20px;
@@ -197,160 +261,237 @@ ul>li{
     border: 1px solid rgb(255, 255, 255);
     width: 150px;
 }
-@media screen and (max-width:576px){
-    .box, box-1, b0x-2{
+
+@media screen and (max-width:576px) {
+
+    .box,
+    box-1,
+    b0x-2 {
         flex-direction: column;
     }
-    .box-2 img{
+
+    .box-2 img {
         border-radius: 30px;
-        
+        height: 180px;
     }
 }
-.calculator{
+
+@media (min-width: 800px) and (max-width: 1188px) {
+    .box {
+        flex-direction: row;
+        
+    }
+    .box-2 img{
+        width: 300px;
+    }
+    .box-1{
+        width: 120%;
+    }
+}
+
+.calculator {
     text-align: center;
     font-size: large;
-    
+
 }
-.box-3{
-    tabile{
-        border-collapse:collapse ;
+
+.box-3 {
+    tabile {
+        border-collapse: collapse;
         font-size: 18px;
         text-align: left;
     }
-    th,td{
+
+    th,
+    td {
         padding: 3px 10px;
         border: 1px solid white;
     }
+
     width: 50%;
 }
 
 
-.chart{
+.chart {
     background-color: rgb(56, 47, 47);
-    display:flex;
+    display: flex;
     justify-content: center;
     padding: 50px;
     gap: 30px;
 }
-.box-6{
-    display:grid;
-    grid-template-columns:repeat(2 ,1fr) ;
-    width:500px;
-    gap: 10px;margin-bottom: 10px;
-  
-    
+
+.box-6 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+    margin-bottom: 10px;
+
+
 }
 
-.box-6-input{
+.box-6-input {
     padding: 7px;
     border-radius: 7px;
     background-color: rgb(83, 79, 79);
-    
+ 
+
 }
-.gender{
-    width: 100%;
+
+.gender {
     padding: 7px;
     background-color: rgb(83, 79, 79);
     border-radius: 5px;
 }
-.activity{
+
+.activity {
     grid-column: 1/ span 2;
     display: block;
     padding: 7px;
-    background-color: rgb(83, 79, 79) ;
+    background-color: rgb(83, 79, 79);
     border-radius: 5px;
+
+} 
+
+
+@media screen and (max-width:576px) {
+    .calculator {
+        flex-direction: column;
+    }
+
+    .chart {
+        flex-direction: column;
+    }
+
+    .box-3 {
+        flex-direction: column;
+    }
+
+    .box-6 {
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+    }
+    .bmi-form{
+         width: 300px; 
+    }
+.box-6-input{
+    width: 80%;
 }
-@media screen  and (max-width:576px){
-    .calculator{
+}
+
+@media (min-width: 800px) and (max-width: 1188px) {
+    .calculator {
         flex-direction: column;
     }
-    .chart{
+
+    .chart {
         flex-direction: column;
-    }
-    .box-3{
-        flex-direction: column;
-    }
-    .box-6{
-        grid-template-columns:repeat(1,1fr);
     }
 }
-.team{
+
+.team {
     text-align: center;
     padding-bottom: 20px;
 }
-.relative{
+
+.relative {
     position: relative;
 }
-.name{
+
+.name {
     position: absolute;
     left: 5px;
     bottom: 5px;
 }
+
 .trining-center {
-    width: Fill (1,060px)px;
-height: Hug (604px)px;
-gap:15px;
-opacity: 0px;
-display: grid;
-grid-template-columns: repeat(3 ,1fr);
-background-color: rgb(117, 104, 104);
-border-radius: 10px;
-width: 100%;
-padding: 20px;
+    width: Fill (1, 060px)px;
+    height: Hug (604px)px;
+    gap: 15px;
+    opacity: 0px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    background-color: rgb(117, 104, 104);
+    border-radius: 10px;
+    width: 100%;
+    padding: 20px;
 }
- .trining-center img{
-width: 100%;
-height: 250px;
-border-radius: 20px;
-    
+
+.trining-center img {
+    width: 100%;
+    height: 250px;
+    border-radius: 20px;
+
 }
-@media screen and (max-width:576px){
-    .team{
-        flex-direction:column;
+
+@media screen and (max-width:576px) {
+    .team {
+        flex-direction: column;
     }
-    .trining-center{
+
+    .trining-center {
         display: grid;
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: repeat(1, 1fr);
     }
 }
-.last h2{
+
+@media (min-width: 800px) and (max-width: 1188px) {
+    .team {
+        text-align: center;
+    }
+}
+
+.last h2 {
     color: red;
     font-size: 50px;
 }
-.last{
+
+.last {
     padding-left: 20px;
 }
-.full-body{
+
+.full-body {
     background-color: rgb(99, 91, 91);
     padding-left: 100px;
     padding-top: 10px;
     display: flex;
     margin-top: 30px;
     padding-bottom: 10px;
-flex-direction: column;
+    flex-direction: column;
 }
-.br{
+
+.br {
     display: flex;
     padding-top: 60px;
     gap: 40px;
 
 }
-@media screen and (max-width:576px){
-    .full-body{
+
+@media screen and (max-width:576px) {
+    .full-body {
         flex-direction: clumn;
     }
 }
-@media screen and (max-width:576px){
-    .full-body{
+
+@media screen and (max-width:576px) {
+    .full-body {
         flex-direction: column;
     }
-    .br{
+
+    .br {
         flex-direction: column;
     }
-    .cr{
+
+    .cr {
         flex-direction: column;
     }
 }
-.cr{
+
+.cr {
     text-align: center;
+}
+
+@media (min-width: 800px) and (max-width: 1188px) {
+    .full-body {
+        flex-direction: column;
+    }
 }
